# RAG_Pipeline

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api/: models.py  server.py
api/routes/: collections.py  health.py  ingest.py  query.py
src/: chunking.py  config.py  data_ingestion.py  generation.py  vector_embeddings.py
ui/: app.py
